regression_tests/snap/check/testsl11/testsl11.err
================================================================================

                      PROGRAM SNAP  Version 2.7.10-a339290

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Jun 24 2018 08:40:44

================================================================================
                     Run at 26-JUN-2018 10:27:12 by ccrook




================================================================================
                                                            26-JUN-2018 10:27:12

                                 ERROR SUMMARY

================================================================================

Error: Invalid "inside" option in station list requires coord sys code and wkt file name
       Line 17: File testsl11.snp

Error: The command file is not correct
